--- a/README
+++ b/README
@@ -3,9 +3,19 @@ CS169 Lab Assistant Project
 
 [Google Doc to specs] (https://docs.google.com/document/d/1N_nocpqQ78HhfVEzlyf9IWe11TKSnsc7suQdlcPADHU/edit)
 
+TODO: Add the link to the youtube video!
+
+Developers
+---------------------
+
 Quinton Dang
+
 Brian Ha
+
 Youri Park
+
 Tristan Jones
+
 Vincent Tian
+
 Kevin Xie
