add more model stuff and devise to TAs and LAs

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,9 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  devise:
+    sessions:
+      teacher:
+        new:
+          heading: Log In
+          subtitle: We're ready to get started.
